kubia-manual-with-labels.yaml
kind: Pod
apiVersion: v1
metadata:
  name: kubia-manual-v2
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
  - name: kubia
    image: luksa/kubia
    ports:
      - containerPort: 8080
        protocol: TCP
