kubia-manual.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
  labels:
    name: kubia-manual
spec:
  containers:
  - name: kubia
    image: luksa/kubia
    ports:
      - containerPort: 8080
        protocol: TCP
