kubia-svc-loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
