kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
  - port: 80          # This is the port of the service's internal clsuter IP.
    targetPort: 8080  # This is the target port of the backing pods.
    nodePort: 30123   # The service will be accessible through port 30123 of each of your cluster nodes.
  selector:
    app: kubia
